--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -538,11 +538,15 @@
     <details>
       <summary>If $T\subseteq Z$ is bounded.</summary>
 
-      Suppose $T\subseteq Z$ and is bounded below by $\alpha$.  Then $T+\alpha\subseteq N$ and therefore has a minimum, say $\beta$.  <br>
+      Suppose $T\subseteq Z$ and is bounded below by $\alpha$.  Then $T+\alpha\subseteq N$ and therefore has a minimum.  <br>
 
-      
+      Then $\min(T) = \min((T+\alpha)-\alpha) = \min(T+\alpha)-\alpha$ exists.
+
+      Next suppose $T$ is bounded above by $\alpha$.  Then $-T$ is bounded below by $-\alpha$.  <br>
+
+      Then from the result above, $-T$ has a minimum, and then $$\max(T) = \max(-(-T)) = -\min(-T)$ exists.  
     </details>
 
-
+    $\Box$
   </body> 
 </html>
