--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -91,7 +91,7 @@
 
       <i>Proof</i>: Define $S = \{n\in\Bbb N: nx < y \}$.  If $S = \emptyset$ then $y < 1x$ and the theorem holds, so assume for the rest of the proof that $S\ne \emptyset$.  <br>
 
-      $S$ is then bounded above by $y/x$.  Since $S$ is a nonempty set of integers, bounded above, then $\max(S)=\sup(S)$ exists.  <br>
+      $S$ is then bounded above by $y/x$.  Since $S$ is a nonempty set of integers, bounded above, then $\max(S)$ exists.  <br>
 
       Therefore $\max(S)+1\notin S$ and therefore $y < (\max(S)+1)x$ by definition of $S$.  <br>
 
@@ -108,11 +108,15 @@
     <details>
       <summary>Statement and proof.</summary>
 
-      <i>Statement</i>: <br><br>
-
-      <i>Proof</i>: 
-
+      <i>Statement</i>: Let $a\in\Bbb R^+$.  Then there is an $n \in\Bbb R$ such that $\frac 1 n < a$.  <br>
       
+      An infinitesimal is a nonzero number smaller than every positive rational number.  As a corrolary, of this theorem, there is no infinitesimal real number.<br><br>
+
+      <i>Proof</i>: Let $a\in\Bbb R^+$.  By the <tt>Seq. thousand steps</tt> theorem, there is an $n\in\Bbb N$ such that $1 < an$. <br>
+
+      Therefore $\frac 1 n < a$.  
+
+      $\Box$
     </details>
 
     <div class="thm">
