--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -497,7 +497,7 @@
 
       If $S$ is bounded above then $\max(S)$ exists.  <br>
 
-      And if $T\subseteq Z$ and if $Z$ is bounded below, then $\min(T)$ exists; and if $T$ is bounded above then $\max(T)$ exists.  
+      And if $T\subseteq Z$ and if $Z$ is bounded below, then $\min(T)$ exists; and if $T$ is bounded above then $\max(T)$ exists.  <br></br>
 
     <i>Proof</i>:  
 
