--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -537,7 +537,7 @@
     <details>
       <summary>If $T\subseteq Z$ is bounded.</summary>
 
-      Suppose $T\subseteq Z$ and is bounded below by $\alpha$.  Then $T+\alpha\subseteq N$ and therefore has a minimum.  <br>
+      Suppose $T\subseteq Z$ and is bounded below by $\alpha$.  Then $T+\alpha\subseteq N$ and therefore $T+\alpha$ has a minimum.  <br>
 
       Then $\min(T) = \min((T+\alpha)-\alpha) = \min(T+\alpha)-\alpha$ exists.
 
