--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -147,7 +147,7 @@
 
       By definition, therefore 
 
-      $$ \lim_{k\to\infty}a_k = 0 $$
+      $$ \lim_{k\to\infty}\frac 1 k = 0 $$
 
       $\Box$
     </details>
@@ -160,9 +160,11 @@
     <details>
       <summary>Statement and proof.</summary>
 
-      <i>Statement</i>: <br><br>
+      <i>Statement</i>: Let $(a_k)_{k=m}$ be a sequence, and $m\le p$ a natural number.  Then there is a subsequence of $(a_k)_{k=m}$ which is equal to the $p$th tail.  <br><br>
 
-      <i>Proof</i>: 
+      <i>Proof</i>: Define $(j_k)_{k=p}$ by $j_k = k$.  Then $a_{j_k} = a_k$ on the domain $\Bbb N^{\ge p}$.  Therefore $(a_{j_k})_{k=p} = (a_k)_{k=p}$.  <br>
+      
+      $\Box$
 
       
     </details>
