--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -188,8 +188,6 @@
       <i>Proof</i>: Define $(j_k)_{k=p}$ by $j_k = k$.  Then $a_{j_k} = a_k$ on the domain $\Bbb N^{\ge p}$.  Therefore $(a_{j_k})_{k=p} = (a_k)_{k=p}$.  <br>
       
       $\Box$
-
-      
     </details>
 
     <div class="thm">
@@ -200,7 +198,8 @@
     <details>
       <summary>Statement and proof.</summary>
 
-      <i>Statement</i>: Suppose $\lim_{k\to\infty} a_k = L\in\Bbb R$.  <br><br>
+      <i>Statement</i>: Suppose $\lim_{k\to\infty} a_k = L\in\Bbb R$ and let $(a_{i_k})_{k=1}$ be a subsequence.  Then 
+      $$\lim_{k\to\infty} a_{i_{k}} = L$$
 
       <i>Proof</i>: 
 
