--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -222,11 +222,13 @@
     <details>
       <summary>Statement and proof.</summary>
 
-      <i>Statement</i>: <br><br>
+      <i>Statement</i>: $\lim_{k\to\infty} a_k = L$ if and only if $\lim_{k\to\infty}|a_k-L| = 0$.<br><br>
 
       <i>Proof</i>: 
-
       
+      The proof comes entirely from definitions, and the fact that $|a_k-L| = ||a_k-L|-0|$.  <br>
+
+      $\Box$
     </details>
 
     <div class="thm">
