--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -240,7 +240,14 @@
     <details>
       <summary>Statement and proof.</summary>
 
-      <i>Statement</i>: <br><br>
+      <i>Statement</i>: Assume that $a_n\to A, b_n\to B$ and $c\in\Bbb R$.  <br><br>
+
+      <ol>
+        <li>$\lim_{k\to\infty} ca_k = c A$.</li>
+        <li>$\lim_{k\to\infty} (a_k+b_k) = A+B$.</li>
+        <li>$\lim_{k\to\infty} a_kb_k = AB$.</li>
+        <li>If $b_k\ne 0$ for every $k\ge m$, and if $B\ne 0$, then $\lim_{k\to\infty}\frac{a_k}{b_k} = \frac AB$.</li>
+      </ol>
 
       <i>Proof</i>: 
 
