--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -323,7 +323,7 @@
 
         Let $(b_k)_{k=q}$ be such that $\frac{|B|}{2} < |b_k|$.  Then for $k\ge \max\{p,q\}$,
 
-        $$\begin{alinged}
+        $$\begin{aligned}
           |1/b_k - 1/B| & = \left| \frac{B-b_k}{b_kB} \right| \\
           &= \frac{|b_k-B|}{|b_k||B|} \\
           &< \frac{\varepsilon|B|^2/2}{(|B|/2)|B|} \\
