--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
         <li>Defs: </li>
         <li>Thm:</li>
       </ol>
+      <li><a href="refPages/unit2/0010infinlim.html">Lesson 0010: Infinite Limits</a></li>
+      <ol>
+        <li>Notation: </li>
+        <li>Defs: </li>
+        <li>Thm:</li>
+      </ol>
     </ul>
   </details>
 
