--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -323,12 +323,16 @@
 
         Let $(b_k)_{k=q}$ be such that $\frac{|B|}{2} < |b_k|$.  Then for $k\ge \max\{p,q\}$,
 
-        $$\begin{aligned}
-          \left|1/b_k - 1/B\right| & = \left\vert \frac{B-b_k}{b_kB} \right\vert \\
-          &= \frac{|b_k-B|}{|b_k||B|} \\
-          &< \frac{\varepsilon|B|^2/2}{(|B|/2)|B|} \\
-          &= \varepsilon
-        \end{aligned}$$
+        $$
+\begin{aligned}
+\left| \frac{1}{b_k} - \frac{1}{B} \right| 
+&= \left| \frac{B - b_k}{b_k B} \right| \\
+&= \frac{ |b_k - B| }{ |b_k| \, |B| } \\
+&< \frac{ \varepsilon |B|^2 / 2 }{ (|B|/2) |B| } \\
+&= \varepsilon
+\end{aligned}
+$$
+
       </details>
 
       $\Box$
