--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -326,7 +326,7 @@
         $$
 \begin{aligned}
 \left| \frac{1}{b_k} - \frac{1}{B} \right| 
-&= \left| \frac{B - b_k}{b_k B} \right| \\
+&= \Bigg| \frac{B - b_k}{b_k B} \Bigg| \\
 &= \frac{ |b_k - B| }{ |b_k| \, |B| } \\
 &< \frac{ \varepsilon |B|^2 / 2 }{ (|B|/2) |B| } \\
 &= \varepsilon
