--- a/refPages/unit2/0010infinlim.html
+++ b/refPages/unit2/0010infinlim.html
@@ -143,14 +143,21 @@
       <ol>
         <li>If $\text{deg}(P) < \text{deg}(Q)$ then $\lim_{k\to\infty}R(k) = 0$.</li>
         <li>If $\text{deg}(P) = \text{deg}(Q)$ then $\lim_{k\to\infty}R(k)$ is equal to the ratio of the leading coefficients of $P$ and $Q$.  </li>
-        <li>If $\text{deg}(P) > \text{deg}(Q)$ then $\lim_{k\to</li>
+        <li>If $\text{deg}(P) > \text{deg}(Q)$ then $\lim_{k\to\infty}R(k)=\pm \infty$. </li>
       </ol>
       
       <br><br>
 
       <i>Proof</i>: 
 
-      
+      <details>
+        <summary>If $\text{deg}(P) < \text{deg}(Q)$ then $\lim_{k\to\infty}R(k)=0$.</summary>
+
+        Let $P(k) = a_0+a_1k+\cdots +a_pk^p$ and $Q(k) = b_0+b_1k + \cdots b_{p+q}k^{p+q}$.  Then 
+        $$\begin{aligned}
+          \lim_{k\to\infty}\frac{a_0+a_1k+\cdots+a_pk^p}{b_0+b_1+\cdots+b_{p+q}k^{p+q}} & = 
+        \end{aligned}$$
+      </details>
     </details>
   </body>
 </html>
