--- a/refPages/unit2/0010infinlim.html
+++ b/refPages/unit2/0010infinlim.html
@@ -158,7 +158,7 @@
         Then 
         $$\begin{aligned}
           \lim_{k\to\infty}\frac{a_0+a_1k+\cdots+a_pk^p}{b_0+b_1+\cdots+b_{q}k^{q}} & = 
-            \lim_{k\to\infty}\frac{a_0/k^q+a_1/k^{n-1}+\cdots a_p/k^{q-p}}{ b_0/k^q+b_1/k^{q-1}+\cdots+b_q }
+            \lim_{k\to\infty}\frac{a_0/k^q+a_1/k^{q-1}+\cdots a_p/k^{q-p}}{ b_0/k^q+b_1/k^{q-1}+\cdots+b_q }
         \end{aligned}$$
       </details>
     </details>
