--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -124,6 +124,24 @@
     </details>
 
     <div class="thm">
+      Theorem: <tt>Seq. equiv. incr.</tt>  <br>
+      A sequence is increasing if and only if $a_{k} < a_{k+1}$ for each $m\le k$.  
+    </div>
+
+    <details>
+      <summary>Statement and proof.</summary>
+
+      If $(a_k)_{k=m}$ is increasing then it follows trivially that $a_k < a_{k+1}$ for each $m\le k$.  <br>
+
+      Assume that $a_k < a_{k+1}$ for every $m\le k$.  Now let $m\le p < q$.  <br>
+
+      Then 
+      $$ a_p < a_{p+1} < \cdots < a_{q} $$
+
+      $\Box$
+    </details>
+
+    <div class="thm">
       Theorem: <tt>Seq. one over n</tt> <br>
       $\frac 1 n \to 0$.
     </div>
