--- a/refPages/unit2/0010infinlim.html
+++ b/refPages/unit2/0010infinlim.html
@@ -212,7 +212,9 @@
       <details>
         <summary>If $m > n$ then $\lim_{k\to\infty}R(k) = \infty$.</summary>
 
-
+        After factoring, 
+        $$ R(k) = ( n^{m-n} ) \cdot \left( \frac{a_0/k^m + a_1/k^{m-1} + \cdots+ a_{m-1}/k+1}{b_0/k^n + b_1/k^{n-1} + \cdots + b_{n-1}/k + 1} \right) $$
+        Then $\lim_{k\to\infty} R(k) = \infty \cdot 1 = \infty$.  
       </details>
     </details>
 
