--- a/refPages/unit2/0010infinlim.html
+++ b/refPages/unit2/0010infinlim.html
@@ -64,7 +64,7 @@
         $$\begin{aligned}
           x\pm\infty = y\cdot\pm\infty = \pm\infty, -y\cdot\pm\infty=\mp\infty \\
           \infty+\infty = \infty\cdot\infty = -\infty\cdot-\infty = \infty \\
-          -\infty-\infty = \infty\cdot-\infty = -\infty\cdoot \infty = -\infty, \
+          -\infty-\infty = \infty\cdot-\infty = -\infty\cdot \infty = -\infty, \
         \end{aligned}$$
 
         With these defintions, the definition of $\lim_{k\to\infty}a_k$ is now extended to being a value in $\Bbb R^*$.  If $\lim_{k\to\infty}a_k = \pm\infty$ then we say either that the limit <b>does not exist as a real number</b>, or that it <b>exists as an extended real number</b>.  <br>
