--- a/refPages/unit2/0011specfun.html
+++ b/refPages/unit2/0011specfun.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ACIRA 0011 Polynomials and Rational Functions</title>
+    <title>ACIRA 0011 Limits of Special Functions</title>
     <style>
       body {
         font-family: sans-serif;
@@ -42,7 +42,11 @@
     ></script>
   </head>
   <body>
-    <h1>Lesson 0011: Polynomials and Rational Functions</h1>
+    <h1>Lesson 0011: Limits of Special Functions</h1>
+
+    <div class="thm">
+      Theorem: <tt>Spec. monom. </tt>
+    </div>
 
     <div class="thm">
         Theorem: <tt>Infin. lim. poly.</tt> <br>
@@ -68,7 +72,7 @@
     </details>
 
     <div class="thm">
-      Theorem: <tt>Infin. lim. rational func.</tt> <br>
+      Theorem: <tt>Spec. rational func.</tt> <br>
       The limit of rationals functions.
     </div>
 
@@ -122,8 +126,21 @@
         $$ R(k) = ( n^{m-n} ) \cdot \left( \frac{a_0/k^m + a_1/k^{m-1} + \cdots+ a_{m-1}/k+1}{b_0/k^n + b_1/k^{n-1} + \cdots + b_{n-1}/k + 1} \right) $$
         Then $\lim_{k\to\infty} R(k) = \infty \cdot 1 = \infty$.  
       </details>
-    </details>
 
     $\Box$
+    </details>
+
+    <div class="thm">
+      Theorem: <tt>Spec. exp.</tt> <br>
+      Limits of exponentials.
+    </div>
+
+    <details>
+      <summary>Statement and proof.</summary>
+
+      <i>Statement</i>: Let $0 < c < 1$, then $\lim_{k\to\infty} c^k = 0$.  If $1 < c$ then $\lim_{k\to\infty} c^k = \infty$.  <br><br>
+
+      <i>Proof</i>: 
+    </details>
   </body>
 </html>
