--- a/index.html
+++ b/index.html
@@ -260,6 +260,12 @@
         <li>Defs: </li>
         <li>Thm:</li>
       </ol>
+      <li><a href="refPages/unit2/0011specfun.html">Lesson 0011: Limits of Special Functions</a></li>
+      <ol>
+        <li>Notation: </li>
+        <li>Def: </li>
+        <li>Thm: </li>
+      </ol>
     </ul>
   </details>
 
