--- a/refPages/unit2/0011specfun.html
+++ b/refPages/unit2/0011specfun.html
@@ -147,7 +147,7 @@
 
       <i>Statement</i>: Let $0 < c < 1$, then $\lim_{k\to\infty} c^k = 0$.  If $1 < c$ then $\lim_{k\to\infty} c^k = \infty$.  <br><br>
 
-      <i>Proof</i>: 
+      <i>Proof</i>: Let $\varepsilon\in\Bbb R^+$ and let $(c^k)_{k=1}
     </details>
   </body>
 </html>
