--- a/refPages/unit2/0010infinlim.html
+++ b/refPages/unit2/0010infinlim.html
@@ -178,6 +178,8 @@
         \end{aligned} $$
         Therefore $a_kb_k\to\infty$.
       </details>
+
+      $\Box$
     </details>
 
     <div class="thm">
