--- a/refPages/unit2/0011specfun.html
+++ b/refPages/unit2/0011specfun.html
@@ -74,13 +74,13 @@
     <details>
         <summary>Statement and proof.</summary>
 
-        <i>Statement</i>: Let $P(k)$ be a polynomial with degree $n\ge 1$, with a positive leading coefficient.  Then $\lim_{k\to\infty}P(k) = \infty$.  If the leading coefficient is negative then $\lim_{k\to\infty} P(k) = -\infty$ and otherwise $\lim_{k\to\infty}P(k)=\infty$.  <br></br>
+        <i>Statement</i>: Let $P(k)$ be a polynomial with degree $n\ge 1$, with a positive leading coefficient.  Then $\lim_{k\to\infty}P(k) = \infty$.  If the leading coefficient is negative then $\lim_{k\to\infty} P(k) = -\infty$.  <br></br>
 
         <i>Proof</i>: Let $P(k) = a_0+a_1k + \cdots + a_nk^n = k^n\cdot (a_0/k^n + a_1/k^{n-1} + \cdots + a_n)$.  <br>
         
         Then 
         $$\begin{aligned}
-          \lim_{k\to\infty} P(k) = \infty\cdot a_n 
+          \lim_{k\to\infty} P(k) = \infty\cdot a_n
         \end{aligned}$$
 
         If $a_n < 0$ then $\infty \cdot a_n = -\infty$ and otherwise $\infty\cdot a_n = \infty$.  <br>
