--- a/refPages/unit2/0012specfun.html
+++ b/refPages/unit2/0012specfun.html
@@ -33,6 +33,9 @@
             ["\\(", "\\)"],
           ],
         },
+        chtml: {
+          scale: 1.5  // Increase font size by 150%
+        },
         svg: { fontCache: "global" },
       };
     </script>
