--- a/refPages/unit2/0012specfun.html
+++ b/refPages/unit2/0012specfun.html
@@ -34,7 +34,7 @@
           ],
         },
         chtml: {
-          scale: 1.5  // Increase font size by 150%
+          scale: 1.2
         },
         svg: { fontCache: "global" },
       };
