--- a/refPages/unit2/0010infinlim.html
+++ b/refPages/unit2/0010infinlim.html
@@ -33,6 +33,9 @@
             ["\\(", "\\)"],
           ],
         },
+        chtml: {
+          scale: 1.2
+        },
         svg: { fontCache: "global" },
       };
     </script>
